; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/sw/rxe/extr_rxe_net.c_rxe_mcast_delete.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/sw/rxe/extr_rxe_net.c_rxe_mcast_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rxe_dev = type { i32 }
%union.ib_gid = type { i64 }
%struct.in6_addr = type { i32 }

@ETH_ALEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rxe_mcast_delete(%struct.rxe_dev* %0, %union.ib_gid* %1) #0 {
  %3 = alloca %struct.rxe_dev*, align 8
  %4 = alloca %union.ib_gid*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store %struct.rxe_dev* %0, %struct.rxe_dev** %3, align 8
  store %union.ib_gid* %1, %union.ib_gid** %4, align 8
  %8 = load i32, i32* @ETH_ALEN, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %6, align 8
  %11 = alloca i8, i64 %9, align 16
  store i64 %9, i64* %7, align 8
  %12 = load %union.ib_gid*, %union.ib_gid** %4, align 8
  %13 = bitcast %union.ib_gid* %12 to i64*
  %14 = load i64, i64* %13, align 8
  %15 = inttoptr i64 %14 to %struct.in6_addr*
  %16 = call i32 @ipv6_eth_mc_map(%struct.in6_addr* %15, i8* %11)
  %17 = load %struct.rxe_dev*, %struct.rxe_dev** %3, align 8
  %18 = getelementptr inbounds %struct.rxe_dev, %struct.rxe_dev* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @dev_mc_del(i32 %19, i8* %11)
  store i32 %20, i32* %5, align 4
  %21 = load i32, i32* %5, align 4
  %22 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %22)
  ret i32 %21
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @ipv6_eth_mc_map(%struct.in6_addr*, i8*) #2

declare dso_local i32 @dev_mc_del(i32, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
